# digit-classifier-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: activations.h  image.h  layer.h  loader.h  matrix.h  model.h  network.h  progress.h
src/: CMakeLists.txt  loader.cpp  main.cpp  model.cpp  network.cpp  progress.cpp
